<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="22dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/buyAgainItem_ImageView"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/menu1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_desc_text" />

            <TextView
                android:id="@+id/buyAgainItem_FoodNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/yeon_sung_regular"
                android:text="@string/spacy_crab"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/buyAgainItem_ImageView"
                app:layout_constraintTop_toTopOf="@+id/buyAgainItem_ImageView" />

            <TextView
                android:id="@+id/buyAgainItem_SellerNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/yeon_sung_regular"
                android:text="@string/waroenk_kita"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/buyAgainItem_ImageView"
                app:layout_constraintTop_toBottomOf="@+id/buyAgainItem_FoodNameTextView" />

            <TextView
                android:id="@+id/buyAgainItem_PriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/_35"
                android:textColor="@color/textColor"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="@+id/buyAgainItem_ImageView"
                app:layout_constraintStart_toEndOf="@+id/buyAgainItem_ImageView"
                app:layout_constraintTop_toBottomOf="@+id/buyAgainItem_SellerNameTextView" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buyAgainItem_BuyAgainButton"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/greenbuttongradent"
                android:fontFamily="@font/yeon_sung_regular"
                android:text="@string/buy_again"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>