<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragments.HistoryFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/yeon_sung_regular"
            android:text="@string/recent_buy"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="0dp"
            android:layout_height="87dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/recentBuyItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/historyOrderedImageView"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/image_desc_text"
                    android:scaleType="centerCrop"
                    android:src="@drawable/menu1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/historyOrderedFoodName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/yeon_sung_regular"
                    android:text="@string/spacy_crab"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/historyOrderedImageView"
                    app:layout_constraintTop_toTopOf="@+id/historyOrderedImageView" />


                <TextView
                    android:id="@+id/historyOrderedFoodPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/_35"
                    android:textColor="@color/textColor"
                    app:layout_constraintBottom_toBottomOf="@+id/historyOrderedImageView"
                    app:layout_constraintStart_toEndOf="@+id/historyOrderedImageView" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/historyOrderedStatus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="32dp"
                    android:backgroundTint="#6B6C6B"
                    app:cardCornerRadius="22dp"
                    app:layout_constraintBottom_toTopOf="@+id/historyFragmentReceivedButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/historyFragmentReceivedButton"
                    android:layout_width="60dp"
                    android:visibility="invisible"
                    android:layout_height="20dp"
                    android:background="@drawable/add_to_cart_shape"
                    android:fontFamily="@font/yeon_sung_regular"
                    android:text="@string/received"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/historyOrderedStatus"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/historyOrderedStatus"
                    app:layout_constraintTop_toBottomOf="@+id/historyOrderedStatus" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/yeon_sung_regular"
            android:text="@string/previously_buy"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView4" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyBuyAgainRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView24"
            app:layout_constraintVertical_bias="0.263" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>